@@ -1,4 +1,6 @@
 ncmpc 0.43 - not yet released
+* support MPD 0.22 tags "conductor", "work", "grouping" (requires
+  libmpdclient 2.17)
 * playlist editor
 * file page: handle mouse double clicks
 
